syshard.css
body 
{
    font-family: Helvetica, Arial, sans-serif;
}

div.image 
{
    background-image: url(img/syshardimg.JPG);
    background-size: cover;
    background-repeat: no-repeat;
    height: 300px;
}
div.image2 {
    background-color: black;
    min-height: 500px;
}
div.xkcd {
    background-image: url(img/xkcd.JPG);
    background-size: auto;
    background-position: top center;
    background-repeat: no-repeat;
    margin-top: 20px;
    height: 500px;

}
div.slide
{
    min-height: 500px;
    background-color: white;
}
div.questions
{
    background-color: white;
}
.header 
{
    border-style: none none solid none;
    padding: 20px 20px;
    height: auto;
}
div.button
{
    padding-top: 20px;
}

li.size 
{
    font-size: 20px;
    margin: 0px 20px 40px 20px;
}

li.margin 
{
    margin-left: 100px;
}
button
{
    padding: 15px 35px;
    background-color: black;
    color: white;
}

button:hover
{
    background-color: #ddd;
    color: black;
    -webkit-transition-duration: 0.4s; /* Safari */
    transition-duration: 0.4s;
}

.center 
{
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 90%;
}

.mynavbar .nav li 
{
    display: inline-block;
    float: none;
    margin: 0 20px;
    vertical-align: middle;
}
* { box-sizing: border-box }

.mySlides 
{
    display: none;
}

img 
{
    vertical-align: middle;
}

/* Slideshow container */
.slideshow-container 
{
    max-width: 1000px;
    position: relative;
    margin: auto;
}

/* Next & previous buttons */
.prev, .next 
{
    cursor: pointer;
    position: absolute;
    top: 50%;
    width: auto;
    padding: 16px;
    margin-top: -22px;
    color: black;
    font-weight: bold;
    font-size: 18px;
    transition: 0.6s ease;
    border-radius: 0 3px 3px 0;
}

/* Position the "next button" to the right */
.next 
{
    right: 0;
    border-radius: 3px 0 0 3px;
}

    /* On hover, add a black background color with a little bit see-through */
    .prev:hover, .next:hover 
    {
        background-color: rgba(0,0,0,0.8);
    }

/* Caption text */
.text 
{
    color: #f2f2f2;
    font-size: 15px;
    padding: 8px 12px;
    position: absolute;
    bottom: 8px;
    width: 100%;
    text-align: center;
}

/* Number text (1/3 etc) */
.numbertext 
{
    color: #f2f2f2;
    font-size: 12px;
    padding: 8px 12px;
    position: absolute;
    top: 0;
}

/* The dots/bullets/indicators */
.dot 
{
    cursor: pointer;
    height: 15px;
    width: 15px;
    margin: 0 2px;
    background-color: #bbb;
    border-radius: 50%;
    display: inline-block;
    transition: background-color 0.6s ease;
}

    .active, .dot:hover 
    {
        background-color: #717171;
    }

/* Fading animation */
.faded 
{
    -webkit-animation-name: fade;
    -webkit-animation-duration: 1.5s;
    animation-name: fade;
    animation-duration: 1.5s;
}

@-webkit-keyframes fade 
{
    from 
    {
        opacity: .4
    }

    to 
    {
        opacity: 1
    }
}

@keyframes fade 
{
    from 
    {
        opacity: .4
    }

    to 
    {
        opacity: 1
    }
}

/* On smaller screens, decrease text size */
@media only screen and (max-width: 300px) 
{
    .prev, .next, .text 
    {
        font-size: 11px
    }
}

